feat(sdk,api): add message meta
